--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -6,16 +6,32 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 50px;
-    background-color: #5d5d5d;
+    height: 60px;
+    background-color: #4c4c4c;
     z-index: 1000;
+    color: white;
 
     &.scrolling-up {
         transition: transform 0.2s ease-in;
     }
 
     &.scrolling-down {
-        transform: translate(0, -50px);
+        transform: translate(0, -60px);
         transition: transform 0.2s ease-in;
+    }
+
+    nav {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+
+        a {
+            color: white;
+            text-decoration: none;
+
+            &:hover {
+                color: #e9d77e;
+            }
+        }
     }
 }
