--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,13 +1,13 @@
 header {
     position: fixed;
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     align-items: center;
     top: 0;
     left: 0;
     width: 100%;
     height: 60px;
-    background-color: #4c4c4c;
+    background-color: #000; //#4c4c4c;
     z-index: 1000;
     color: white;
 
@@ -23,7 +23,7 @@ header {
     nav {
         display: flex;
         justify-content: space-around;
-        width: 100%;
+        width: 50%;
 
         a {
             color: white;
