--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@ body {
     color: black;
 
     #root {
+        margin: 60px 0 0;
         width: 100%;
         height: 100%;
         min-height: 200vh;
