--- a/src/components/ToolsShowcase/index.scss
+++ b/src/components/ToolsShowcase/index.scss
@@ -7,7 +7,7 @@
     background-color: $background-dark-grey;
     padding: 50px 20px;
 
-    h1 {
+    .tools-title {
         color: white;
         font-weight: bolder;
     }
