--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,10 @@
         'Lucida Sans', 'Arial', 'sans-serif';
 }
 
+html {
+    width: 100%;
+}
+
 body {
     margin: 0;
     min-height: 100vh;
@@ -12,7 +16,6 @@ body {
         margin: 60px 0 0;
         width: 100%;
         height: 100%;
-        min-height: 200vh;
         background-color: white;
     }
 }
