--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -14,6 +14,10 @@ footer {
         li > a {
             text-decoration: none;
             color: black;
+
+            &:hover {
+                text-decoration: underline;
+            }
         }
     }
 }
