--- a/src/index.scss
+++ b/src/index.scss
@@ -19,3 +19,9 @@ body {
         background-color: white;
     }
 }
+
+@media (max-width: 570px) {
+    body {
+        position: absolute;
+    }
+}
