--- a/src/components/Header/LanguageSwitcher/index.scss
+++ b/src/components/Header/LanguageSwitcher/index.scss
@@ -8,7 +8,13 @@
     border-radius: 5px;
     margin-right: 20px;
 
-    .language-switch-icon {
+    tbody,
+    tr,
+    td {
+        border-collapse: collapse;
+    }
+
+    tbody tr .language-switch-icon {
         &.fr {
             padding: 0 4px;
             border-right: 1px solid white;
