--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,3 +1,5 @@
+@import '../../style/media';
+
 header {
     position: fixed;
     display: flex;
@@ -31,6 +33,18 @@ header {
 
             &:hover {
                 color: #e9d77e;
+            }
+        }
+    }
+}
+
+@media (max-width: $mobile-max-width) {
+    header {
+        nav {
+            width: 100%;
+
+            a {
+                font-size: 15px;
             }
         }
     }
