--- a/src/components/Projects/ProjectCard/index.scss
+++ b/src/components/Projects/ProjectCard/index.scss
@@ -1,3 +1,5 @@
+@import '../../../style/media';
+
 .project-container {
     display: flex;
     flex-direction: column;
@@ -29,6 +31,23 @@
 
         h2 {
             font-size: 20px;
+        }
+    }
+}
+
+@media (max-width: $mobile-max-width) {
+    .project-container {
+        .project-card {
+            height: 250px;
+            width: 100%;
+            margin-bottom: 40px;
+
+            border-width: 0;
+            border-radius: 0;
+        }
+
+        .project-text {
+            text-align: justify;
         }
     }
 }
