--- a/src/components/ToolsShowcase/ToolsList/index.scss
+++ b/src/components/ToolsShowcase/ToolsList/index.scss
@@ -46,8 +46,8 @@
             margin: 5px 0 2px;
         }
 
-        .tools-list {
-            // font-family: 'Sans-serif';
-        }
+        //.tools-list {
+        // font-family: 'Sans-serif';
+        //}
     }
 }
