--- a/src/components/ToolsShowcase/index.scss
+++ b/src/components/ToolsShowcase/index.scss
@@ -11,6 +11,7 @@
     .tools-title {
         color: white;
         font-weight: bolder;
+        margin-left: 40px;
     }
 
     .toolslists-container {
